<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParamActivity">

    <Button
        android:id="@+id/but_main_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/but_main"
        app:layout_constraintEnd_toStartOf="@+id/but_param_p"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_text_p" />

    <Button
        android:id="@+id/but_ok_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK_str"
        app:layout_constraintEnd_toStartOf="@+id/but_implicit_p"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/but_param_p"
        app:layout_constraintTop_toTopOf="@+id/but_main_p" />

    <Button
        android:id="@+id/but_implicit_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/but_ok_p"
        app:layout_constraintTop_toTopOf="@+id/but_main_p" />

    <Button
        android:id="@+id/but_param_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_paramactiv"
        app:layout_constraintEnd_toStartOf="@+id/but_ok_p"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/but_main_p"
        app:layout_constraintTop_toTopOf="@+id/but_main_p" />

    <EditText
        android:id="@+id/et_text_p"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:text="@string/et_text_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_num_p"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_num_p"
        android:layout_width="76dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_num"
        app:layout_constraintBottom_toBottomOf="@+id/et_text_p"
        app:layout_constraintEnd_toStartOf="@+id/et_text_p"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_text_p" />

    <LinearLayout
        android:id="@+id/ll_fragm_p"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but_main_p" />

</androidx.constraintlayout.widget.ConstraintLayout>